# GateWayMine

./: .cursorignore  .gitignore  README.md  annotate_plasmid.py  attB.fa  attB_manual.fa  attL_manual.fa  attP.fa  attR.fa  destination_sites.json  donor_sites.json  format_data.py  format_manual_cloning.py  gather_addgene_kits.py  get_addgene_article_refs.py  get_addgene_kit_plasmids.py  get_addgene_kits.py  get_addgene_kits_info.py  get_all_gateway_plasmids.py  get_other_plasmids.py  get_snapgene_files.py  main.py  make_alignments.py  make_alignments_and_consensus.sh  make_combinatorial_att_sites.py  make_consensus_alignment.py  make_consensus_sites.py  make_feature_dict.py  make_logos.py  make_plasmid_files.sh  make_plasmid_site_dict.py  make_plasmid_summary.py  make_unique_sites.py  manual_entry.tsv  plasmid2sites.tsv  pyproject.toml  run_alignments_and_consensus.sh  run_data_mining.sh  run_formatting.sh
alignments/: all.clu  all_sorted.clu  attB.clu  attP.clu  attP1_aligned.clu  attP2_aligned.clu  attP3_aligned.clu  attP4_aligned.clu  attR.clu  attR4_aligned.clu  group1.clu  group2.clu  group3.clu  group4.clu  no_B.clu  no_B_sorted.clu  valerie.clu  valerie.fa
data/: addgene_article_refs.tsv  addgene_kit_plasmids.json  addgene_kits.txt  all_gateway_plasmids.tsv
manual_cloning/: entry-attP1_2-attP2_2.dna  entry-attP3_1-attP2_1.dna  entry-attP4_2-attP1_4.dna  entry-attP5-attP4_1.dna  entry_attP1_1_attP2_1.dna  entry_attP1_2_attP2_2.dna  expression-attP1_1-attP2_1.dna  pDONRtm221 P3-P2.dna  pDONR™ P4-P1r.dna  pDONR™221 P5-P4.dna  pET-53-DESTtm.dna  (+1 more)
(+164 files in other folders)
