[tool.poetry]
name = "gateway-sequences"
version = "0.1.0"
description = "Find all gateway sequences from SnapGene plasmid library"
authors = ["Manuel Lera-Ramirez <manulera14@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
biopython = "^1.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
